# django-poll

./: pyproject.toml
pollapp/: views.py
pollapp/migrations/: 0001_initial.py
pollsite/: settings.py  urls.py
